tests/marouter/errors/false_options/missing_input/options.marouter
-d input_taz.taz.xml -o routes.rou.xml
